  * Update Wubi icon. Still need to figure out why it's fuzzy in the
    Windows 7 taskbar.
  * Pre-allocate the swap file in disk image installs.
  * Add unit tests to wubi.
  * Properly parse the output of 7z's iso listing (LP: #856340).
  * Removed unused Ubuntu Netbook images (symlinks).
  * Use the Plymouth splash (LP: #862007).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 03 May 2011 21:57:25 +0100

wubi (11.04) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Bump to 11.04.
  * Sync up checks for permitted characters in usernames with user-setup
    (LP: #397129).
  * Don't strip underscores from the host username.
  * Update translations from Launchpad.
  * Switch to new keyboard-configuration/* names for console-setup
    preseeding.
  * Add the true, vbe, vga, video_bochs, and video_cirrus modules to the
    wubildr image, to support our default configuration file.

  [ Jonathan Riddell ]
  * Remove Kubuntu Netbook option, no longer a separate CD
  * Update Kubuntu artwork

  [ Evan Dandrea ]
  * Update translations from Launchpad.
  * Remove Wubi from the Windows Startup folder, if found.
  * Catch IO errors around trying to remove Wubi from the startup folder
    (LP: #771517).
  * Only ever schedule the wubi binary for removal later (LP: #771517).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 30 Jun 2010 11:44:43 +0100

wubi (10.10) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Bump to 10.10.
  * GRUB no longer has a 'sh' module; use 'normal' instead.
  * Pass '-O i386-pc' to grub-mkimage, required by GRUB snapshots from
    2010-05-17 onwards.
  * wubildr.cfg needs to be run using GRUB's normal parser rather than its
    rescue parser.  Rather than embedding it directly as a configuration
    file, embed it as a memdisk and add wubildr-bootstrap.cfg which invokes
    it using normal mode (LP: #600578).
  * Import KEY_SET_VALUE in win32 registry module.
  * Remove some unused or duplicate imports.